[gd_scene load_steps=2 format=3 uid="uid://lgixnw8dfkei"]

[ext_resource type="Script" uid="uid://bg5e3uskxwljv" path="res://menu.gd" id="1_lti8b"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 250
theme_override_constants/margin_right = 400

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Fight for Honor"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Opciones" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Opciones"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
